--- a/browser-extension/page.html
+++ b/browser-extension/page.html
@@ -16,7 +16,7 @@
           "Helvetica Neue", Arial, sans-serif;
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         min-height: 100vh;
-        padding: 20px;
+        padding: 10px;
       }
 
       .container {
@@ -27,49 +27,51 @@
       .header {
         text-align: center;
         color: white;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
       }
 
       .header h1 {
-        font-size: 36px;
-        margin-bottom: 10px;
+        font-size: 24px;
+        margin-bottom: 5px;
       }
 
       .header p {
-        font-size: 16px;
+        font-size: 12px;
         opacity: 0.9;
       }
 
       .card {
         background: white;
         border-radius: 12px;
-        padding: 30px;
+        padding: 15px;
         box-shadow: 0 10px 40px rgba(0, 0, 0, 0.1);
-        margin-bottom: 20px;
+        margin-bottom: 15px;
       }
 
       h2 {
-        margin-bottom: 20px;
+        margin-bottom: 15px;
         color: #333;
+        font-size: 20px;
       }
 
       .form-group {
-        margin-bottom: 20px;
+        margin-bottom: 15px;
       }
 
       label {
         display: block;
-        margin-bottom: 8px;
+        margin-bottom: 5px;
         font-weight: 500;
         color: #555;
+        font-size: 14px;
       }
 
       input {
         width: 100%;
-        padding: 12px;
+        padding: 10px;
         border: 2px solid #e0e0e0;
         border-radius: 8px;
-        font-size: 16px;
+        font-size: 14px;
         transition: border-color 0.3s;
       }
 
@@ -80,13 +82,13 @@
 
       button {
         width: 100%;
-        padding: 14px;
+        padding: 12px;
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         color: white;
         border: none;
         border-radius: 8px;
         cursor: pointer;
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 600;
         transition: transform 0.2s, box-shadow 0.2s;
       }
@@ -151,43 +153,61 @@
 
       .overall-average {
         text-align: center;
-        font-size: 72px;
+        font-size: 48px;
         font-weight: bold;
-        margin: 30px 0;
+        margin: 20px 0;
       }
 
       .period-section {
-        margin-bottom: 30px;
+        margin-bottom: 15px;
         background: white;
         border-radius: 12px;
-        padding: 25px;
+        padding: 15px;
         box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
       }
 
       .period-title {
-        font-size: 24px;
+        font-size: 18px;
         font-weight: bold;
-        margin-bottom: 10px;
+        margin-bottom: 8px;
         color: #333;
       }
 
       .period-average {
-        font-size: 36px;
+        font-size: 28px;
         font-weight: bold;
-        margin-bottom: 20px;
+        margin-bottom: 15px;
       }
 
       .subject-row {
-        padding: 15px;
-        margin-bottom: 15px;
+        padding: 10px;
+        margin-bottom: 10px;
         border-radius: 8px;
         background: white;
         border: 2px solid #e0e0e0;
         display: grid;
-        grid-template-columns: 2fr 3fr 1fr;
-        gap: 15px;
-        align-items: center;
+        grid-template-columns: 1fr;
+        gap: 8px;
         transition: border-color 0.3s, box-shadow 0.3s;
+      }
+
+      .average-container {
+        display: flex;
+        gap: 8px;
+        align-items: stretch;
+        justify-content: center;
+        flex-wrap: wrap;
+      }
+
+      .average-container > * {
+        flex: 1 1 auto;
+        min-width: 100px;
+      }
+
+      @media (max-width: 480px) {
+        .average-container > * {
+          flex: 1 1 100%;
+        }
       }
 
       .subject-row:hover {
@@ -197,8 +217,9 @@
 
       .subject-name {
         font-weight: 600;
-        font-size: 18px;
+        font-size: 14px;
         color: #333;
+        margin-bottom: 5px;
       }
 
       .grades {
@@ -209,10 +230,10 @@
 
       .grade-badge {
         display: inline-block;
-        padding: 8px 14px;
+        padding: 6px 10px;
         border-radius: 6px;
         font-weight: 600;
-        font-size: 16px;
+        font-size: 13px;
         color: white;
         cursor: pointer;
         transition: transform 0.2s;
@@ -224,11 +245,31 @@
 
       .subject-average {
         font-weight: bold;
-        font-size: 28px;
+        font-size: 18px;
         text-align: center;
-        padding: 15px 24px;
+        padding: 12px 15px;
         border-radius: 8px;
         color: white;
+        margin-top: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 48px;
+      }
+
+      .needed-grade {
+        font-size: 18px;
+        padding: 12px 15px;
+        border-radius: 8px;
+        background-color: #17a2b8;
+        color: white;
+        font-weight: bold;
+        white-space: nowrap;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-height: 48px;
+        margin-top: 5px;
       }
 
       .subject-average.text-success {
@@ -333,16 +374,16 @@
       }
 
       .modal-body p {
-        margin-bottom: 15px;
-        line-height: 1.6;
-        font-size: 18px;
+        margin-bottom: 10px;
+        line-height: 1.5;
+        font-size: 14px;
       }
 
       .modal-body strong {
         color: #333;
         display: inline-block;
-        min-width: 140px;
-        font-size: 18px;
+        min-width: 100px;
+        font-size: 14px;
       }
     </style>
   </head>
